--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -9,6 +9,7 @@
     background-color: white;
     border-radius: 5px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    margin-bottom: 1em;
 }
 
 .home-title {
